# API.Model.Python

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  sandbox.yml
docker/: Dockerfile
source/: pyproject.toml
source/src/: __init__.py  main.py
source/src/adapters/inbound/: __init__.py
source/src/adapters/inbound/http/: schemas.py
source/src/adapters/inbound/http/routes/: __init__.py  root.py  users.py
source/src/adapters/outbound/repositories/: __init__.py
source/src/application/services/: user_service.py
source/src/domain/: __init__.py  errors.py
source/src/domain/ports/: user_repository.py
source/tests/: conftest.py
source/tests/unit/application/: test_user_service.py
src/: main.py
src/adapters/: __init__.py
src/adapters/inbound/http/: dependencies.py  schemas.py
src/adapters/inbound/http/routes/: health.py  root.py  users.py
src/adapters/outbound/: __init__.py
src/adapters/outbound/repositories/: in_memory_user_repository.py
src/application/: __init__.py  commands.py
src/application/services/: __init__.py  user_service.py
src/domain/: errors.py  user.py
src/domain/ports/: __init__.py  user_repository.py
tests/: conftest.py
tests/results/: coverage.xml
tests/unit/adapters/http/: test_users_api.py
tests/unit/application/: test_user_service.py
